project (batman)
 
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
SET(CMAKE_CONFIGURATION_TYPES "Debug;Release")
 
SET( batman_SRCS batman.cpp)
 
FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)
FIND_PACKAGE(SDL_mixer REQUIRED)
FIND_PACKAGE(SDL_net REQUIRED)
FIND_PACKAGE(SDL_ttf REQUIRED)
FIND_PACKAGE(SQLite3 REQUIRED)

INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR} ${SDLTTF_INCLUDE_DIR} ${SDLMIXER_INCLUDE_DIR} ${SDLIMAGE_INCLUDE_DIR} ${SDLNET_INCLUDE_DIR} ${SQLITE3_INCLUDE_DIR})
 
add_executable(batman WIN32 ${batman_SRCS})
 
TARGET_LINK_LIBRARIES(batman ${SDL_LIBRARY} ${SDLTTF_LIBRARY} ${SDLMIXER_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLNET_LIBRARY} ${SQLITE3_LIBRARIES})